// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module renders module with multiple children 1`] = `
<Row
  className="case-study-module module-text"
  defaultColumn={false}
  elementType="section"
  size="small"
>
  <Column
    elementType="div"
    largeSize={12}
    scale="large"
    smallSize={12}
    style={Object {}}
  >
    <Text
      type="p"
    >
      Foo
    </Text>
    <Text
      type="p"
    >
      Foo
    </Text>
  </Column>
</Row>
`;

exports[`Module renders module with type media 1`] = `
<Row
  className="case-study-module module-media"
  defaultColumn={false}
  elementType="section"
  size="medium"
>
  <Column
    elementType="div"
    largeSize={12}
    scale="large"
    smallSize={12}
    style={Object {}}
  >
    <Image
      alt="Foo"
      height={500}
      src="https://path/to/image.png"
      width={700}
    />
  </Column>
</Row>
`;

exports[`Module renders module with type text 1`] = `
<Row
  className="case-study-module module-text"
  defaultColumn={false}
  elementType="section"
  size="small"
>
  <Column
    elementType="div"
    largeSize={12}
    scale="large"
    smallSize={12}
    style={Object {}}
  >
    <Text
      type="p"
    >
      Foo
    </Text>
  </Column>
</Row>
`;
